fix: remove inappropriate tagline from restaurant footer

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       <div class="container">
         <p>
           &copy; 2025 EL RINCONCITO FAMILAR. Established traditions in fine
-          dining and hospitality. The Boys Are Cheap!
+          dining and hospitality.
         </p>
       </div>
     </footer>
