feat: add image modal with morphing animation and enhanced carousel content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Navigation -->
     <nav class="navbar">
       <div class="nav-container">
         <a href="#" class="logo">El Rinconcito Familar</a>
@@ -26,7 +25,6 @@
       </div>
     </nav>
 
-    <!-- Hero Section -->
     <section id="home" class="hero">
       <div class="hero-content">
         <h1>El Rinconcito Familar</h1>
@@ -35,7 +33,6 @@
       </div>
     </section>
 
-    <!-- Interactive Image Carousel -->
     <section id="gallery" class="carousel-section">
       <div class="section-title">
         <h2>Taste Is Happiness!</h2>
@@ -51,7 +48,10 @@
             />
             <div class="carousel-info">
               <h3>Classic Appetizers</h3>
-              <p>Traditional canapés and appetizers</p>
+              <p>
+                Traditional Dominican canapés and appetizers featuring authentic
+                flavors and family recipes passed down through generations
+              </p>
             </div>
           </div>
           <div class="carousel-item">
@@ -61,28 +61,107 @@
             />
             <div class="carousel-info">
               <h3>Traditional Roasts</h3>
-              <p>Prime cuts with classic preparations</p>
+              <p>
+                Perfectly seasoned prime cuts prepared with traditional
+                Dominican spices and slow-cooking techniques for maximum flavor
+              </p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/1563511923575053103.jpg" alt="Classic Desserts" />
             <div class="carousel-info">
               <h3>Classic Desserts</h3>
-              <p>Traditional sweets and pastries</p>
+              <p>
+                Authentic Dominican sweets and pastries including tres leches,
+                flan, and other beloved traditional desserts
+              </p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/2191930021430407707.jpg" alt="Formal Settings" />
             <div class="carousel-info">
-              <h3>Formal Table Service</h3>
-              <p>Elegant dining presentations</p>
+              <h3>Elegant Presentations</h3>
+              <p>
+                Beautiful plating and presentation showcasing the artistry
+                behind each Dominican dish with attention to detail
+              </p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="images/2413964340781540055.jpg" alt="Garden Salads" />
             <div class="carousel-info">
-              <h3>Garden Selections</h3>
-              <p>Fresh seasonal accompaniments</p>
+              <h3>Fresh Garden Selections</h3>
+              <p>
+                Crisp salads and fresh seasonal accompaniments featuring
+                tropical ingredients and vibrant Dominican flavors
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="images/2740646041354886946.jpg"
+              alt="Dominican Specialties"
+            />
+            <div class="carousel-info">
+              <h3>Dominican Specialties</h3>
+              <p>
+                Signature dishes from the Dominican Republic including pollo
+                guisado, pernil, and other beloved traditional specialties
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/3220084761568974474.jpg" alt="Fresh Ingredients" />
+            <div class="carousel-info">
+              <h3>Premium Fresh Ingredients</h3>
+              <p>
+                Only the finest quality produce and ingredients sourced for
+                authentic flavor and nutritional value in every dish
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/4512232984177445939.jpg" alt="Homestyle Cooking" />
+            <div class="carousel-info">
+              <h3>Homestyle Dominican Cooking</h3>
+              <p>
+                Comfort food prepared with love using time-honored family
+                recipes that bring the warmth of Dominican homes to your table
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/5655142240736728899.jpg" alt="Comfort Foods" />
+            <div class="carousel-info">
+              <h3>Dominican Comfort Foods</h3>
+              <p>
+                Hearty, soul-warming dishes like sancocho, mangu, and other
+                traditional comfort foods that satisfy both body and spirit
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="images/6167273405823079498.jpg"
+              alt="Traditional Platters"
+            />
+            <div class="carousel-info">
+              <h3>La Bandera Platters</h3>
+              <p>
+                Complete Dominican meals featuring rice, beans, and meat - the
+                traditional 'La Bandera' that represents the heart of Dominican
+                cuisine
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/7629928282691815420.jpg" alt="Festive Dishes" />
+            <div class="carousel-info">
+              <h3>Celebration Specialties</h3>
+              <p>
+                Special dishes prepared for holidays and celebrations, featuring
+                the rich flavors and festive spirit of Dominican culture
+              </p>
             </div>
           </div>
         </div>
@@ -99,10 +178,15 @@
         <span class="dot" data-slide="2"></span>
         <span class="dot" data-slide="3"></span>
         <span class="dot" data-slide="4"></span>
+        <span class="dot" data-slide="5"></span>
+        <span class="dot" data-slide="6"></span>
+        <span class="dot" data-slide="7"></span>
+        <span class="dot" data-slide="8"></span>
+        <span class="dot" data-slide="9"></span>
+        <span class="dot" data-slide="10"></span>
       </div>
     </section>
 
-    <!-- Menu Section -->
     <section id="menu" class="menu-section">
       <div class="container">
         <div class="section-title">
@@ -195,7 +279,6 @@
       </div>
     </section>
 
-    <!-- About Section -->
     <section id="about" class="about-section">
       <div class="container">
         <div class="about-content">
@@ -227,7 +310,6 @@
       </div>
     </section>
 
-    <!-- Contact Section -->
     <section id="contact" class="contact-section">
       <div class="container">
         <div class="section-title">
@@ -242,13 +324,13 @@
           <div class="contact-card">
             <div class="contact-icon">☎</div>
             <h3>Telephone</h3>
-            <p>(646) 712-****</p>
+            <p>(646) 712-4193</p>
           </div>
 
           <div class="contact-card">
             <div class="contact-icon">✉</div>
             <h3>Email</h3>
-            <p>info@heritagecatering.com<br />events@heritagecatering.com</p>
+            <p>vpbmj0316@gmail.com</p>
           </div>
 
           <div class="contact-card">
@@ -281,7 +363,6 @@
       </div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
       <div class="container">
         <p>
@@ -290,6 +371,22 @@
         </p>
       </div>
     </footer>
+
+    <!-- Image Modal -->
+    <div id="imageModal" class="modal">
+      <div class="modal-animator"></div>
+      <div class="modal-content">
+        <span class="close-modal">&times;</span>
+        <div class="modal-image-container">
+          <img id="modalImage" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" alt="" />
+        </div>
+        <div class="modal-card">
+          <h3 id="modalTitle"></h3>
+          <p id="modalDescription"></p>
+        </div>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
